@@ -1,6 +1,7 @@
 package com.javaquery.sas.discovery.controller.rest.exception;
 
 import com.javaquery.sas.discovery.controller.rest.response.CommonResponse;
+import com.javaquery.util.collection.Collections;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
 import org.springframework.http.HttpHeaders;
@@ -30,7 +31,7 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler{
     protected ResponseEntity<Object> handleMissingServletRequestParameter(MissingServletRequestParameterException ex, HttpHeaders headers,
                                                                           HttpStatus status, WebRequest request) {
         String error = ex.getParameterName() + " parameter is missing.";
-        return new ResponseEntity<>(CommonResponse.of(HttpStatus.BAD_REQUEST.value(), List.of(error)), HttpStatus.BAD_REQUEST);
+        return new ResponseEntity<>(CommonResponse.of(HttpStatus.BAD_REQUEST.value(), Collections.singletonList(error)), HttpStatus.BAD_REQUEST);
     }
 
     @Override
@@ -42,21 +43,23 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler{
             }
             return new ResponseEntity<>(CommonResponse.of(HttpStatus.BAD_REQUEST.value(), messages), HttpStatus.BAD_REQUEST);
         } catch (Exception e) {
-            return new ResponseEntity<>(CommonResponse.of(HttpStatus.BAD_REQUEST.value(), List.of(ex.getMessage())), HttpStatus.INTERNAL_SERVER_ERROR);
+            return new ResponseEntity<>(CommonResponse.of(HttpStatus.BAD_REQUEST.value(), Collections.singletonList(ex.getMessage())), HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
 
     /**
-     * @param ex
-     * @param request
-     * @return
+     * Handle runtime exception exception response entity.
+     *
+     * @param ex      the ex
+     * @param request the request
+     * @return the response entity
      */
     @ExceptionHandler({EntityNotFoundException.class, RuntimeException.class})
     protected ResponseEntity<?> handleRuntimeExceptionException(RuntimeException ex, HttpServletRequest request) {
         try {
-            return new ResponseEntity<>(CommonResponse.of(HttpStatus.BAD_REQUEST.value(), List.of(ex.getMessage())), HttpStatus.BAD_REQUEST);
+            return new ResponseEntity<>(CommonResponse.of(HttpStatus.BAD_REQUEST.value(), Collections.singletonList(ex.getMessage())), HttpStatus.BAD_REQUEST);
         } catch (Exception e) {
-            return new ResponseEntity<>(CommonResponse.of(HttpStatus.BAD_REQUEST.value(), List.of(ex.getMessage())), HttpStatus.INTERNAL_SERVER_ERROR);
+            return new ResponseEntity<>(CommonResponse.of(HttpStatus.BAD_REQUEST.value(), Collections.singletonList(ex.getMessage())), HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
 }
